Criação do arquivo leia-me e acertando a página principal do projeto

--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html LANG="pt-br">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Ecoleta</title>
 
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@700&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="/styles/main.css">
     </head>
-    
-    <body>
-        Ecoleta
-        Cacastre seu ponto de coleta
-        Seu marketplace de coletas de resíduos
-        Ajudamos pessoas a encontrarem seus pontos de coleta de forma eficiente.
-        botão
+
+    <body> 
+
+        <div id="page-home">
+
+            <div class="content red">
+                <header>
+                    <img src="assets/logo.svg" alt="Logomarca">
+                    <a href="#">Cadastre seu ponto de coleta</a>
+                </header>
+
+                <h1>Seu marketplace de coletas de resíduos</h1>
+
+                <p>
+                    Ajudando pessoas a encontrarem seus pontos de coleta de forma eficiente.
+                </p> 
+
+                <button>Pesquisar pontos de coleta</button>
+
+            </div> 
+        </div>
+
     </body>
 
 </html>
