--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ecoleta</title>
 
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="/styles/main.css">
     </head>
@@ -17,16 +17,26 @@
             <div class="content red">
                 <header>
                     <img src="assets/logo.svg" alt="Logomarca">
-                    <a href="#">Cadastre seu ponto de coleta</a>
+                    <a href="#">
+                        <span></span>
+                        Cadastre seu ponto de coleta
+                    </a>
                 </header>
 
-                <h1>Seu marketplace de coletas de resíduos</h1>
+                <main>
 
-                <p>
-                    Ajudando pessoas a encontrarem seus pontos de coleta de forma eficiente.
-                </p> 
+                    <h1>Seu marketplace de coletas de resíduos</h1>
 
-                <button>Pesquisar pontos de coleta</button>
+                    <p>
+                        Ajudando pessoas a encontrarem seus pontos de coleta de forma eficiente.
+                    </p> 
+    
+                    <a href="#">
+                        <span></span>
+                        <strong>Pesquisar pontos de coleta</strong>
+                    </a>
+
+                </main>
 
             </div> 
         </div>
