--- a/create-point.html
+++ b/create-point.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ecoleta</title>
+        <title>Criar um ponto de coleta</title>
 
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 
@@ -14,9 +14,8 @@
 
     <body> 
 
-        <div id="page-home">
+        <div id="page-create-point">
 
-            <div class="content">
                 <header>
                     <img src="assets/logo.svg" alt="Logomarca">
                     <a href="#">
@@ -40,7 +39,6 @@
 
                 </main>
 
-            </div> 
         </div>
 
     </body>
