--- a/create-point.html
+++ b/create-point.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="/styles/main.css">
-        <link rel="stylesheet" href="/styles/home.css">
+        <link rel="stylesheet" href="/styles/create-point.css">
         <link rel="stylesheet" href="/styles/responsive.css">
     </head>
 
@@ -20,24 +20,60 @@
                     <img src="assets/logo.svg" alt="Logomarca">
                     <a href="#">
                         <span></span>
-                        Cadastre seu ponto de coleta
+                        Voltar para home
                     </a>
                 </header>
 
-                <main>
+                <form action="">
 
-                    <h1>Seu marketplace de coletas de resíduos</h1>
+                    <h1>Cadastrar ponto de coleta</h1>
 
-                    <p>
-                        Ajudando pessoas a encontrarem seus pontos de coleta de forma eficiente.
-                    </p> 
-    
-                    <a href="#">
-                        <span></span>
-                        <strong>Pesquisar pontos de coleta</strong>
-                    </a>
+                    <fieldset>
+                        <legend>
+                            <h2>Dados da entidade</h2>
+                        </legend>
 
-                </main>
+                        <div class="field">
+                            <label for="name">Nome da entidade</label>
+                            <input type="text" name="name">
+                        </div>
+
+                        <div class="field-group">
+                            <div class="field">
+                                <label for="adress">Endereço</label>
+                                <input type="text" name="adress">
+                            </div>
+                            <div class="field">
+                                <label for="number">Número/Complemento</label>
+                                <input type="text" name="number">
+                            </div>
+                        </div>
+
+                        <div class="field-group">
+                            <div class="field">
+                                <label for="state">Estado</label>
+                                <select name="uf">
+                                    <option value="">Selecione o Estado</option>
+                                </select>
+                            </div>
+                            <div class="field">
+                                <label for="city">Cidade</label>
+                                <select name="city" disabled>
+                                    <option value="">Selecione a Cidade</option>
+                                </select>
+                            </div>
+                        </div>
+                    </fieldset>
+
+                    <fieldset>
+                        <legend>
+                            <h2>Itens de coleta</h2>
+                        </legend>
+                    </fieldset>
+
+                    <button type="submit">Cadastrar</button>
+
+                </form>
 
         </div>
 
