--- a/create-point.html
+++ b/create-point.html
@@ -55,6 +55,8 @@
                                 <select name="uf">
                                     <option value="">Selecione o Estado</option>
                                 </select>
+
+                                <input type="hidden" name="state">
                             </div>
                             <div class="field">
                                 <label for="city">Cidade</label>
@@ -77,6 +79,7 @@
 
         </div>
 
+        <script src="/scripts/create-point.js"></script>
     </body>
 
 </html>
