Correção na atulização do select ao mudar o estado e inserida a obrigatoriedade nos campos do formulário através do html

--- a/create-point.html
+++ b/create-point.html
@@ -35,24 +35,24 @@
 
                         <div class="field">
                             <label for="name">Nome da entidade</label>
-                            <input type="text" name="name">
+                            <input type="text" name="name" required>
                         </div>
 
                         <div class="field-group">
                             <div class="field">
                                 <label for="adress">Endereço</label>
-                                <input type="text" name="adress">
+                                <input type="text" name="adress" required>
                             </div>
                             <div class="field">
                                 <label for="number">Número/Complemento</label>
-                                <input type="text" name="number">
+                                <input type="text" name="number" required>
                             </div>
                         </div>
 
                         <div class="field-group">
                             <div class="field">
                                 <label for="state">Estado</label>
-                                <select name="uf">
+                                <select name="uf" required>
                                     <option value="">Selecione o Estado</option>
                                 </select>
 
@@ -60,7 +60,7 @@
                             </div>
                             <div class="field">
                                 <label for="city">Cidade</label>
-                                <select name="city" disabled>
+                                <select name="city" disabled required>
                                     <option value="">Selecione a Cidade</option>
                                 </select>
                             </div>
